<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.gov.dstl.baleen</groupId>
  <artifactId>baleen</artifactId>
  <version>2.8.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Baleen</name>
  <description>Structured information from unstructured data</description>
  <url>http://github.com/dstl/baleen</url>
  <inceptionYear>2015</inceptionYear>

  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <scm>
    <url>http://github.com/dstl/baleen</url>
    <connection>scm:git:git://github.com/dstl/baleen.git</connection>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>

    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <developers>
    <developer>
      <name>James Baker</name>
    </developer>
    <developer>
      <name>Chris Flatley</name>
    </developer>
    <developer>
      <name>Rich Brantingham</name>
    </developer>
    <developer>
      <name>Alan Knox</name>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <baleen.version>2.8.0-SNAPSHOT</baleen.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <!-- Dependencies -->
    <activemq.version>5.15.9</activemq.version>
    <ahocorasick.version>0.4.0</ahocorasick.version>
    <classgraph.version>4.8.24</classgraph.version>
    <commonscli.version>1.4</commonscli.version>
    <commonsemail.version>1.5</commonsemail.version>
    <commonsio.version>2.6</commonsio.version>
    <commonslang3.version>3.9</commonslang3.version>
    <concurrenttrees.version>2.6.1</concurrenttrees.version>
    <elasticsearch.version>5.6.16</elasticsearch.version>
    <evoinflector.version>1.2.2</evoinflector.version>
    <extjwnl.version>2.0.2</extjwnl.version>
    <extjwnldata.version>1.2</extjwnldata.version>
    <geodesy.version>2.0.1</geodesy.version>
    <geojson-jackson.version>1.8.1</geojson-jackson.version>
    <gremlin.version>3.3.6</gremlin.version>
    <guava.version>27.1-jre</guava.version>
    <h2.version>1.4.199</h2.version>
    <httpclient.version>4.5.8</httpclient.version>
    <httpcore.version>4.4.11</httpcore.version>
    <jackson.version>2.9.8</jackson.version>
    <javamail.version>1.6.2</javamail.version>
    <javamail-protocols.version>1.6.3</javamail-protocols.version>
    <javassist.version>3.20.0-GA</javassist.version>
    <jena.version>3.8.0</jena.version>
    <jest.version>2.4.0</jest.version>
    <jetty.version>9.4.16.v20190411</jetty.version>
    <jmustache.version>1.14</jmustache.version>
    <jsonic.version>1.3.10</jsonic.version>
    <jsoup.version>1.11.3</jsoup.version>
    <jung.version>2.1.1</jung.version>
    <krill.version>1.0.3</krill.version>
    <languagedetector.version>0.6</languagedetector.version>
    <liblinear.version>2.21</liblinear.version>
    <logback.version>1.2.3</logback.version>
    <maltparser.version>1.9.2</maltparser.version>
    <mboxiterator.version>0.8.3</mboxiterator.version>
    <metrics.version>4.0.0</metrics.version>
    <mongodb.version>3.5.0</mongodb.version>
    <opencsv.version>4.5</opencsv.version>
    <opennlp.version>1.9.1</opennlp.version>
    <osgb.version>1.0.0</osgb.version>
    <postgres.version>42.2.5</postgres.version>
    <reflections.version>0.9.11</reflections.version>
    <slf4j.version>1.7.26</slf4j.version>
    <spatial4j.version>0.6</spatial4j.version>
    <snakeyaml.version>1.24</snakeyaml.version>
    <trove4j.version>3.0.3</trove4j.version>
    <uimafit.version>3.0.0</uimafit.version>


    <!-- Testing -->
    <fongo.version>2.1.1</fongo.version>
    <greenmail.version>1.5.10</greenmail.version>
    <junit.version>4.13.1</junit.version>
    <jts.version>1.13</jts.version>
    <log4j.version>2.11.2</log4j.version>
    <mockito.version>2.27.0</mockito.version>
    <testcontainers.version>1.11.2</testcontainers.version>

    <skip.unit.tests>false</skip.unit.tests>
    <skip.integration.tests>true</skip.integration.tests>

    <!-- Build and Reporting -->
    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
    <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
    <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
    <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
    <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
    <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>${maven-surefire-plugin.version}</maven-failsafe-plugin.version>
    <maven-spotless.version>1.22.0</maven-spotless.version>
    <nexus-staging-plugin.version>1.6.8</nexus-staging-plugin.version>
	<jacoco.version>0.8.3</jacoco.version>
	<coveralls.version>4.3.0</coveralls.version>
    <license.version>1.19</license.version>
  </properties>

  <dependencies>
    <!-- General utilities -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commonsio.version}</version>
    </dependency>

    <!-- UIMA -->
    <dependency>
      <groupId>org.apache.uima</groupId>
      <artifactId>uimafit-core</artifactId>
      <version>${uimafit.version}</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <!-- Compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <skip>${skip.unit.tests}</skip>
          <excludes>
            <exclude>**/*IT.java</exclude>
          </excludes>
          <argLine>${argLine} -Xmx2048m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>

      <!-- Javadocs plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <configuration>
          <additionalOptions>-Xdoclint:none</additionalOptions>
          <doclint>none</doclint>
          <taglets>
            <taglet>
              <tagletClass>uk.gov.dstl.baleen.javadoc.ConfigurationParameters</tagletClass>
              <tagletClass>uk.gov.dstl.baleen.javadoc.ExternalResources</tagletClass>
              <tagletClass>uk.gov.dstl.baleen.javadoc.BaleenJavadoc</tagletClass>
              <tagletArtifact>
                <groupId>uk.gov.dstl.baleen</groupId>
                <artifactId>${javadoc.artifact}</artifactId>
                <version>${baleen.version}</version>
              </tagletArtifact>
            </taglet>
          </taglets>
        </configuration>

        <!-- Deployment -->
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Integration testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <skipITs>${skip.integration.tests}</skipITs>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- formatter -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${maven-spotless.version}</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <style>GOOGLE</style>
            </googleJavaFormat>
            <removeUnusedImports />
            <importOrder>
              <order>java,javax,org,com,uk</order>
            </importOrder>
          </java>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>apply</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
	  
	  <plugin>
		<groupId>org.jacoco</groupId>
		<artifactId>jacoco-maven-plugin</artifactId>
		<version>${jacoco.version}</version>
		<executions>
		  <execution>
		    <id>prepare-agent</id>
			<goals>
			  <goal>prepare-agent</goal>
			</goals>
		  </execution>
		</executions>
	  </plugin>
	  
	  <plugin>
	    <groupId>org.eluder.coveralls</groupId>
		<artifactId>coveralls-maven-plugin</artifactId>
		<version>${coveralls.version}</version>
	  </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <version>${license.version}</version>
      </plugin>

      <!-- Deployment -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>${maven-gpg-plugin.version}</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>${nexus-staging-plugin.version}</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
        </configuration>
      </plugin>
    </plugins>

  </build>

  <modules>
    <module>baleen-core</module>
    <module>baleen-annotators</module>
    <module>baleen-uima</module>
    <module>baleen-resources</module>
    <module>baleen-collectionreaders</module>
    <module>baleen-consumers</module>
    <module>baleen-runner</module>
    <module>baleen-history</module>
    <module>baleen-jobs</module>
    <module>baleen-orderers</module>
    <module>baleen-odin</module>
    <module>baleen-entity-linking</module>
    <module>baleen-mallet</module>
    <module>baleen-graph</module>
    <module>baleen-graph-neo4j</module>
    <module>baleen-rdf</module>
    <module>baleen-transports</module>
    <module>baleen-activemq</module>
    <module>baleen-kafka</module>
    <module>baleen-rabbitmq</module>
    <module>baleen-redis</module>
    <module>${javadoc.artifact}</module>
  </modules>

  <profiles>
    <profile>
      <id>java-8</id>
      <activation>
        <jdk>1.8</jdk>
      </activation>
      <properties>
        <javadoc.artifact>baleen-javadoc</javadoc.artifact>
      </properties>
    </profile>

    <profile>
      <id>java-9</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <javadoc.artifact>baleen-javadoc9</javadoc.artifact>
      </properties>
    </profile>
    
    <profile>
	  <id>disable-logging</id>
	  <build>
	  <testResources>	  
        <testResource>
          <directory>src/test/resources</directory>
        </testResource>
        <testResource>
          <directory>${user.dir}/build</directory>
          <includes>
            <include>logback-test.xml</include>
          </includes>
        </testResource>
      </testResources>
	  </build>
	</profile>
  </profiles>
</project>
